
Limitations:
    1. JDK 1.2 or higher is required
    2. JavaScript support does not include document.write and some DOM properties


Revision History:
24-Oct-2002
Acknowledgements:
    Thanks to Andy Clark for help using the NekoHTML filter capability.

Additions:
    1. document.write and writeln are now supported for embedded uses

22-Oct-2002
Acknowledgements:
    Thanks to Troy Waldrep for help with the new handling of response statuses and messages.

Problems fixed:
    1. A bad certificate on an https connection was incorrectly being flagged as a no-such-server exception. This
       is fixed on JDK 1.4, due to a correct in the JDK. On previous versions of the JDK, HttpUnit is using a
       workaround, which cannot detect the difference.

Notes:
    1. The exception HttpServerNotFoundException has been removed. When no server is found, HttpUnit now throws the
       standard exception: java.net.UnknownHostException
    2. The required jars are now included in the distribution, so it is not necessary to download them separately.
       This was an oversight.

21-Oct-2002
Problems fixed:
    1. The cookie fixes of 17-Oct had caused ServletUnit to see multiple servlets in an application with varying paths
       as being in separate sessions.
    2. ServletUnit now explicitly specifies its locale for generating dates as Locale.US to comply with RFC-1123

17-Oct-2002
Additions:
    1. Cookies are now restricted by their origin server, rather than being sent on every request.
    2. A new package com.meterware.httpunit.cookies, now exists to support the cookie functionality.

14-Oct-2002
Acknowledgements:
    Thanks to Stefan Renz for describing the correct way to set up proxy servers in Java 2 and later.
Additions:
    1. The proxy server may now be specified by calling WebClient.setProxyServer. This should also ensure that the
       correct authorization header is sent.

Problems fixed: