@@ -72,6 +72,11 @@ Inline and included scripts are supported, as are the following DOM elements:
 <li>location - a synonym for window.location</li>
 <li>&lt;name&gt; - the name of a form, image, or link</li>
 </ul>
+<h4>methods</h4>
+<ul>
+<li>write - writes a string to the contents of the current open document</li>
+<li>writeln - writes a line with carriage-return to the contents of the current open document</li>
+</ul>
 
 <h3>Form</h3>
 <h4>properties</h4>
